fix spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -415,7 +415,6 @@ footer .container::before{
 
 .client-testimonial .slick-slide{
   padding: 10px;
-  padding-bottom: 0;
 }
 
 .testimonial-box{
